--- a/examples/physics_ammo_break.html
+++ b/examples/physics_ammo_break.html
@@ -571,33 +571,4 @@
 					for ( let j = 0; j < numObjects; j ++ ) {
 
 						const vel = rb1.getLinearVelocity();
-						const angVel = rb1.getAngularVelocity();
-						const fragment = debris[ j ];
-						fragment.userData.velocity.set( vel.x(), vel.y(), vel.z() );
-						fragment.userData.angularVelocity.set( angVel.x(), angVel.y(), angVel.z() );
-
-						createDebrisFromBreakableObject( fragment );
-
-					}
-
-					objectsToRemove[ numObjectsToRemove ++ ] = threeObject1;
-					userData1.collided = true;
-
-				}
-
-			}
-
-			for ( let i = 0; i < numObjectsToRemove; i ++ ) {
-
-				removeDebris( objectsToRemove[ i ] );
-
-			}
-
-			numObjectsToRemove = 0;
-
-		}
-
-		</script>
-
-	</body>
-</html>
+						const angVel = rb1.getAng
